# rust-jni

./: .gitignore  README.md  jni-workspace.code-workspace
example-jni/: Cargo.toml
example-jni/src/: lib.rs
jni-helpers/: Cargo.toml
jni-helpers/src/: lib.rs
jni-macros/: Cargo.toml
jni-macros/src/: jni_common.rs  lib.rs  traits.rs
jni-macros/src/macros/: jni_fn.rs  jni_impl.rs  mod.rs
jni-macros/src/types/: iput.rs  ret.rs
